# UniversalControlKit

./: .gitignore  COPYING  README.md  THIRD_PARTY_LICENSES.md  UI_ARCHITECTURE.md  controllers.json  meson.build  net.mobitouch.Robots.json  net.mobitouch.UniversalControlKit.json  robots.json
data/: meson.build  net.mobitouch.Robots.desktop.in  net.mobitouch.Robots.gschema.xml  net.mobitouch.Robots.metainfo.xml.in  net.mobitouch.Robots.service.in  net.mobitouch.UniversalControlKit.desktop.in  net.mobitouch.UniversalControlKit.metainfo.xml.in  net.mobitouch.UniversalControlKit.service.in
data/icons/: meson.build
dependencies/: portaudio.json  unitree_webrtc_connect.json
po/: POTFILES.in  meson.build
scripts/: package-macos-dmg-pyinstaller-notarize.sh  package-macos-dmg-pyinstaller.sh  package-macos-dmg.sh  package-windows-exe-pyinstaller.ps1
src/: __main__.py  app_paths.py  main.py  meson.build  mobitouchrobots.gresource.xml  mobitouchrobots.in  movement_controller.py  universalcontrolkit.gresource.xml  universalcontrolkit.in  window.py  window.ui
src/camera_view/: __init__.py  camera_view.py
src/robot/: __init__.py  base.py  robot.py  robot_dummy.py  robot_go2.py  robot_repository.py
src/ui/: controller_config.py  controller_mapping_defaults.json  controller_mapping_defaults.py  controllers_repository.py  protocols.py  robot_actions.py
src/ui/gtk/: __init__.py  gtk_app.py  gtk_camera.py  gtk_controller.py  gtk_robot_selector.py  gtk_window.py
src/ui/qt/: __init__.py  generate_grass_texture.py  qt_add_controller_view.py  qt_add_robot_view.py  qt_app.py  qt_battery_bar.py  qt_camera.py  qt_controller.py  qt_disclaimer_view.py  qt_dualsense_overlay.py  qt_dummy3d_view.py  qt_edit_controller_view.py  qt_edit_robot_view.py  qt_gamepad_controller.py  qt_grid_section.py  qt_main_window.py  qt_panel.py  qt_robot_selector.py  qt_robot_view.py  qt_section.py  qt_top_panel.py  qt_voice_controller.py  qt_voice_settings_view.py  robot_bottom_panel.py
src/ui/tk/: __init__.py  tk_app.py  tk_camera.py  tk_controller.py
src/ui/voice/: command_parser.py  stt_local.py  stt_provider.py  voice_settings.py
